--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,7 @@
 
 <body>
   <p>jdhfjfjhdshdskfh</p>
+  <h1>dlfkdfdskfk</h1>
     <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
